--- a/AZ-APP-RICHI-2/appsettings.json
+++ b/AZ-APP-RICHI-2/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Greeting":  "Greetings from visual studio", 
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=74e8ca0c-8641-4d3e-a4cd-e92909d694a2;IngestionEndpoint=https://brazilsouth-1.in.applicationinsights.azure.com/;LiveEndpoint=https://brazilsouth.livediagnostics.monitor.azure.com/;ApplicationId=7aeca88c-56f8-4d06-8121-0204cdfff67a"
+  }
 }
